pseudo-error-derive/tests/trybuild/fail/tuple_missing_attrs.stderr
error: missing #[location] attribute or field named `location`
 --> tests/trybuild/fail/tuple_missing_attrs.rs:4:26
  |
4 | struct TupleMissingAttrs(std::io::Error, &'static core::panic::Location<'static>);
  |                          ^^^
